SigmaCodebackup3rdSep/objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appointment</label>
        <referenceTo>Appointment__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_date__c</fullName>
        <formula>Appointment__r.AppointmentDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_time__c</fullName>
        <formula>TEXT( Appointment__r.Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_email__c</fullName>
        <label>Customer email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_end_date__c</fullName>
        <formula>Event__r.Event_end_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_start_date__c</fullName>
        <formula>Event__r.Event_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Slot__c</fullName>
        <formula>IF(ISPICKVAL( Appointment__r.period_of_time__c , &apos;MORNING&apos;) , &quot;AM&quot;  , &quot;PM&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Slot</label>
        <type>Text</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Appointment__c</columns>
        <columns>Customer__c</columns>
        <columns>Payment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Appointment_Bookings</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Appointment__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Booking__c.Booking</value>
        </filters>
        <label>Appointment Bookings</label>
    </listViews>
    <listViews>
        <fullName>Course_Members</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Customer_email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Booking__c.Event_booking</value>
        </filters>
        <label>Course Members</label>
    </listViews>
    <nameField>
        <displayFormat>BK-{00000}</displayFormat>
        <label>Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <recordTypes>
        <fullName>Booking</fullName>
        <active>true</active>
        <label>Booking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_booking</fullName>
        <active>true</active>
        <label>Event booking</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>